--- a/index.html
+++ b/index.html
@@ -267,7 +267,8 @@
     </ul>
 
 
-    <a href="https://github.com/Landish/country-flags" class="link-back">Back to Source</a>
+    <pre class="code">click on a flag...</pre>
 
+    <script async defer src="js/app.js"></script>
 </body>
 </html>
