--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <title>Country Flags</title>
     <link href="favicon.ico" rel="shortcut icon" type="image/x-icon" />
-    <link rel="stylesheet" href="https://cdn.rawgit.com/Landish/country-flags/master/css/flags.css">
+    <link rel="stylesheet" href="https://rawgit.com/Landish/country-flags/master/css/flags.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -14,6 +14,7 @@
     <h1>Country Flags</h1>
 
     <ul>
+        <!-- a -->
         <li><i class="flag ad"></i></li>
         <li><i class="flag ae"></i></li>
         <li><i class="flag af"></i></li>
@@ -25,9 +26,11 @@
         <li><i class="flag ao"></i></li>
         <li><i class="flag ar"></i></li>
         <li><i class="flag as"></i></li>
+        <li><i class="flag at"></i></li>
         <li><i class="flag au"></i></li>
         <li><i class="flag aw"></i></li>
         <li><i class="flag az"></i></li>
+        <!-- b -->
         <li><i class="flag ba"></i></li>
         <li><i class="flag bb"></i></li>
         <li><i class="flag bd"></i></li>
@@ -47,8 +50,9 @@
         <li><i class="flag bw"></i></li>
         <li><i class="flag by"></i></li>
         <li><i class="flag bz"></i></li>
+        <!-- c -->
         <li><i class="flag ca"></i></li>
-        <li><i class="flag catalonia"></i></li>
+        <li><i class="flag ct"></i></li>
         <li><i class="flag cd"></i></li>
         <li><i class="flag cf"></i></li>
         <li><i class="flag cg"></i></li>
@@ -65,12 +69,14 @@
         <li><i class="flag cw"></i></li>
         <li><i class="flag cy"></i></li>
         <li><i class="flag cz"></i></li>
+        <!-- d -->
         <li><i class="flag de"></i></li>
         <li><i class="flag dj"></i></li>
         <li><i class="flag dk"></i></li>
         <li><i class="flag dm"></i></li>
         <li><i class="flag do"></i></li>
         <li><i class="flag dz"></i></li>
+        <!-- e -->
         <li><i class="flag ec"></i></li>
         <li><i class="flag ee"></i></li>
         <li><i class="flag eg"></i></li>
@@ -80,12 +86,14 @@
         <li><i class="flag es"></i></li>
         <li><i class="flag et"></i></li>
         <li><i class="flag eu"></i></li>
+        <!-- f -->
         <li><i class="flag fi"></i></li>
         <li><i class="flag fj"></i></li>
         <li><i class="flag fk"></i></li>
         <li><i class="flag fm"></i></li>
         <li><i class="flag fo"></i></li>
         <li><i class="flag fr"></i></li>
+        <!-- g -->
         <li><i class="flag ga"></i></li>
         <li><i class="flag gb"></i></li>
         <li><i class="flag gd"></i></li>
@@ -105,12 +113,14 @@
         <li><i class="flag gu"></i></li>
         <li><i class="flag gw"></i></li>
         <li><i class="flag gy"></i></li>
+        <!-- h -->
         <li><i class="flag hk"></i></li>
         <li><i class="flag hm"></i></li>
         <li><i class="flag hn"></i></li>
         <li><i class="flag hr"></i></li>
         <li><i class="flag ht"></i></li>
         <li><i class="flag hu"></i></li>
+        <!-- i -->
         <li><i class="flag ic"></i></li>
         <li><i class="flag id"></i></li>
         <li><i class="flag ie"></i></li>
@@ -122,10 +132,12 @@
         <li><i class="flag ir"></i></li>
         <li><i class="flag is"></i></li>
         <li><i class="flag it"></i></li>
+        <!-- j -->
         <li><i class="flag je"></i></li>
         <li><i class="flag jm"></i></li>
         <li><i class="flag jo"></i></li>
         <li><i class="flag jp"></i></li>
+        <!-- k -->
         <li><i class="flag ke"></i></li>
         <li><i class="flag kg"></i></li>
         <li><i class="flag kh"></i></li>
@@ -134,10 +146,11 @@
         <li><i class="flag kn"></i></li>
         <li><i class="flag kp"></i></li>
         <li><i class="flag kr"></i></li>
-        <li><i class="flag kurdistan"></i></li>
+        <li><i class="flag kd"></i></li>
         <li><i class="flag kw"></i></li>
         <li><i class="flag ky"></i></li>
         <li><i class="flag kz"></i></li>
+        <!-- l -->
         <li><i class="flag la"></i></li>
         <li><i class="flag lb"></i></li>
         <li><i class="flag lc"></i></li>
@@ -148,6 +161,8 @@
         <li><i class="flag lt"></i></li>
         <li><i class="flag lu"></i></li>
         <li><i class="flag lv"></i></li>
+        <li><i class="flag ly"></i></li>
+        <!-- m -->
         <li><i class="flag ma"></i></li>
         <li><i class="flag mc"></i></li>
         <li><i class="flag md"></i></li>
@@ -170,6 +185,7 @@
         <li><i class="flag mx"></i></li>
         <li><i class="flag my"></i></li>
         <li><i class="flag mz"></i></li>
+        <!-- n -->
         <li><i class="flag na"></i></li>
         <li><i class="flag nc"></i></li>
         <li><i class="flag ne"></i></li>
@@ -182,7 +198,9 @@
         <li><i class="flag nr"></i></li>
         <li><i class="flag nu"></i></li>
         <li><i class="flag nz"></i></li>
+        <!-- o -->
         <li><i class="flag om"></i></li>
+        <!-- p -->
         <li><i class="flag pa"></i></li>
         <li><i class="flag pe"></i></li>
         <li><i class="flag pf"></i></li>
@@ -197,16 +215,19 @@
         <li><i class="flag pt"></i></li>
         <li><i class="flag pw"></i></li>
         <li><i class="flag py"></i></li>
+        <!-- q -->
         <li><i class="flag qa"></i></li>
+        <!-- r -->
         <li><i class="flag re"></i></li>
         <li><i class="flag ro"></i></li>
         <li><i class="flag rs"></i></li>
         <li><i class="flag ru"></i></li>
         <li><i class="flag rw"></i></li>
+        <!-- s -->
         <li><i class="flag sa"></i></li>
         <li><i class="flag sb"></i></li>
         <li><i class="flag sc"></i></li>
-        <li><i class="flag scotland"></i></li>
+        <li><i class="flag sq"></i></li>
         <li><i class="flag sd"></i></li>
         <li><i class="flag se"></i></li>
         <li><i class="flag sg"></i></li>
@@ -217,7 +238,7 @@
         <li><i class="flag sm"></i></li>
         <li><i class="flag sn"></i></li>
         <li><i class="flag so"></i></li>
-        <li><i class="flag somaliland"></i></li>
+        <li><i class="flag sw"></i></li>
         <li><i class="flag sr"></i></li>
         <li><i class="flag ss"></i></li>
         <li><i class="flag st"></i></li>
@@ -225,12 +246,13 @@
         <li><i class="flag sx"></i></li>
         <li><i class="flag sy"></i></li>
         <li><i class="flag sz"></i></li>
+        <!-- t -->
         <li><i class="flag tc"></i></li>
         <li><i class="flag td"></i></li>
         <li><i class="flag tf"></i></li>
         <li><i class="flag tg"></i></li>
         <li><i class="flag th"></i></li>
-        <li><i class="flag tibet"></i></li>
+        <li><i class="flag tb"></i></li>
         <li><i class="flag tj"></i></li>
         <li><i class="flag tl"></i></li>
         <li><i class="flag tk"></i></li>
@@ -242,12 +264,14 @@
         <li><i class="flag tv"></i></li>
         <li><i class="flag tw"></i></li>
         <li><i class="flag tz"></i></li>
+        <!-- u -->
         <li><i class="flag ua"></i></li>
         <li><i class="flag ug"></i></li>
         <li><i class="flag um"></i></li>
         <li><i class="flag us"></i></li>
         <li><i class="flag uy"></i></li>
         <li><i class="flag uz"></i></li>
+        <!-- v -->
         <li><i class="flag va"></i></li>
         <li><i class="flag vc"></i></li>
         <li><i class="flag ve"></i></li>
@@ -255,14 +279,19 @@
         <li><i class="flag vi"></i></li>
         <li><i class="flag vn"></i></li>
         <li><i class="flag vu"></i></li>
-        <li><i class="flag wales"></i></li>
+        <!-- w -->
+        <li><i class="flag wa"></i></li>
         <li><i class="flag wf"></i></li>
         <li><i class="flag ws"></i></li>
+        <!-- x -->
         <li><i class="flag xk"></i></li>
+        <!-- y -->
         <li><i class="flag ye"></i></li>
         <li><i class="flag yt"></i></li>
+        <!-- z -->
         <li><i class="flag za"></i></li>
         <li><i class="flag zm"></i></li>
+        <li><i class="flag zn"></i></li>
         <li><i class="flag zw"></i></li>
     </ul>
 
